# icfs

./: .gitignore  Cargo.toml  LICENSE  README.md  dfx.json  flake.nix
.github/workflows/: nix.yml
crates/icfs/: Cargo.toml  internal.rs  lib.rs  stable_memory.rs
crates/icfs-ext4/: Cargo.toml  lib.rs
crates/icfs-fatfs/: Cargo.toml  lib.rs  time_provider.rs
examples/ext4/: Cargo.toml  ext4.did  lib.rs  test.ic-repl
examples/fat/: Cargo.toml  README.md
examples/fat/src/fat/: Cargo.toml  README.md  lib.rs  time_provider.rs
examples/fatfs/: Cargo.toml  dfx.json  fatfs.did  lib.rs  test.ic-repl
examples/fatfs/src/fatfs/: Cargo.toml
examples/icfs/: Cargo.toml  icfs.did  lib.rs  test.ic-repl
examples/src/fatfs/: Cargo.toml  README.md  lib.rs
src/icfs/: Cargo.toml  lib.rs  stable.rs
