[package]
name = "icfs-ext4"
version = "0.1.0"
edition = "2018"
authors = ["Paul Young <84700+paulyoung@users.noreply.github.com>"]

[lib]
path = "lib.rs"
crate-type = ["cdylib", "lib"]

[dependencies]
ext4 = { git = "https://github.com/FauxFaux/ext4-rs", rev = "1858f9d11ba3454f5a274275e059f631fb7a3b01" }
ic-cdk = { git = "https://github.com/dfinity/cdk-rs.git", rev = "a253119adb08929b6304d007ee0a6a37960656ed" }
icfs = { path = "../../crates/icfs" }
positioned-io = "0.2"