[package]
name = "fatfs-example"
version = "0.1.0"
edition = "2018"
authors = ["Paul Young <84700+paulyoung@users.noreply.github.com>"]

[lib]
path = "lib.rs"
crate-type = ["cdylib", "lib"]

[dependencies]
fatfs = { git = "https://github.com/rafalh/rust-fatfs", rev = "87fc1ed5074a32b4e0344fcdde77359ef9e75432" }
fscommon = "0.1"
ic-cdk = { git = "https://github.com/dfinity/cdk-rs.git", rev = "a253119adb08929b6304d007ee0a6a37960656ed" }
ic-cdk-macros = "0.3"
icfs = { path = "../../crates/icfs" }
icfs-fatfs = { path = "../../crates/icfs-fatfs" }