[package]
name = "fat"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "lib.rs"
crate-type = ["cdylib"]

[dependencies]
fatfs = { git = "https://github.com/rafalh/rust-fatfs" }
fscommon = "0.1"
ic-cdk = "0.3"
ic-cdk-macros = "0.3"
icfs = { path = "../../../../src/icfs" }
