[package]
name = "fat"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "lib.rs"
crate-type = ["cdylib"]

[dependencies]
fatfs = { git = "https://github.com/rafalh/rust-fatfs" }
fscommon = "0.1"
ic-cdk = { git = "https://github.com/dfinity/cdk-rs.git", ref = "main", rev = "a253119adb08929b6304d007ee0a6a37960656ed" }
ic-cdk-macros = "0.3"
icfs = { path = "../../../../src/icfs" }
time = "0.3"